@@ -198,10 +198,12 @@ static void __glcDeleteFont(__GLCfont* font, __GLCcontext* inContext)
 /** \ingroup font
  *  This command deletes the font identified by \e inFont. If \e inFont is an
  *  element in the list \b GLC_CURRENT_FONT_LIST, the command removes that
- *  element from the list.
+ *  element from the list. All information about the font is lost, and the
+ *  indice \e inFont become unused.
  *
  *  The command raises \b GLC_PARAMETER_ERROR if \e inFont is not an element of
- *  the list \b GLC_FONT_LIST.
+ *  the list \b GLC_FONT_LIST and if \e inFont has not been generated by
+ *  glcGenFontID().
  *  \param inFont The ID of the font to delete
  *  \sa glcGetListi() with argument \b GLC_FONT_LIST
  *  \sa glcGeti() with argument \b GLC_FONT_COUNT
@@ -218,19 +220,40 @@ void APIENTRY glcDeleteFont(GLint inFont)
 
   GLC_INIT_THREAD();
 
-  /* Verify that the thread has a current context and that the font identified
-   * by 'inFont' exists.
-   */
-  font = __glcVerifyFontParameters(inFont);
-  if (!font)
-    return;
-
   ctx = GLC_GET_CURRENT_CONTEXT();
+  if (!ctx) {
+    __glcRaiseError(GLC_STATE_ERROR);
+    return;
+  }
 
-  /* remove the font from the GLC_FONT_LIST then destroy it */
-  node = FT_List_Find(&ctx->fontList, font);
-  assert(node);
-  FT_List_Remove(&ctx->fontList, node);
+  /* Search the font to be deleted */
+  for (node = ctx->fontList.head; node; node = node->next) {
+    font = (__GLCfont*)node->data;
+    if (font->id == inFont) {
+      /* remove the font from the GLC_FONT_LIST then destroy it */
+      FT_List_Remove(&ctx->fontList, node);
+      break;
+    }
+  }
+
+  if (!node) {
+    for (node = ctx->genFontList.head; node; node = node->next) {
+      font = (__GLCfont*)node->data;
+      if (font->id == inFont) {
+	/* Remove the font from the empty font list generated by
+	 * glcGenFontID().
+	 */
+	FT_List_Remove(&ctx->genFontList, node);
+	break;
+      }
+    }
+
+    if (!node) {
+      __glcRaiseError(GLC_PARAMETER_ERROR);
+      return;
+    }
+  }
+
   __glcFree(node);
   __glcDeleteFont(font, ctx);
 }
@@ -554,7 +577,8 @@ void APIENTRY glcFontMap(GLint inFont, GLint inCode, const GLCchar* inCharName)
 
 /** \ingroup font
  *  This command returns a font ID that is not an element of the list
- *  \b GLC_FONT_LIST.
+ *  \b GLC_FONT_LIST. This command has also the effect of creating an empty
+ *  font for the returned ID so that this ID become used.
  *  \return A new font ID
  *  \sa glcDeleteFont()
  *  \sa glcIsFont()
@@ -564,6 +588,9 @@ void APIENTRY glcFontMap(GLint inFont, GLint inCode, const GLCchar* inCharName)
 GLint APIENTRY glcGenFontID(void)
 {
   __GLCcontext *ctx = NULL;
+  FT_ListNode node = NULL;
+  __GLCfont* font = NULL;
+  GLint id = 1;
 
   GLC_INIT_THREAD();
 
@@ -574,30 +601,50 @@ GLint APIENTRY glcGenFontID(void)
     return 0;
   }
 
-  /* The context state maintains the lower ID that is greater than all the
-   * the IDs of the fonts in GLC_FONT_LIST. So we return this ID and increments
-   * 'lastFontID' in order to take into account the new ID returned to the
-   * user.
-   * Notice however that :
-   * - Yes, this is a lazy policy
-   * - Even if the user never creates a font with this ID, QuesoGLC will
-   *   assume that this ID is lost until the context is deleted. This may lead
-   *   to unused font IDs.
-   * - If the user calls glcGenFontID() twice in a row he will get 2 different
-   *   IDs even though he/she has not used the first one. This may not be the
-   *   expected behaviour.
-   * - We do not take into account the overfow of the lastFontID parameter
-   *   and an evil user can make QuesoGLC returns the ID of a font that is
-   *   already a member of GLC_FONT_LIST
-   * But that would be the point in checking for such events ? Even if
-   * glcGenFontID() returns silly IDs, *every* GLC function that requires a
-   * font ID as a parameter checks its validity before using it. So yes, this
-   * function is really stupid but since it does not harm, let's keep it this
-   * way. In most cases, it will behave in a sensible way.
-   * Moreover, this behaviour is compliant with GLC specs and as a last resort
-   * the client can manage the font IDs itself.
-   */
-  return ctx->lastFontID++;
+  for (node = ctx->fontList.head; node; node = node->next) {
+    font = (__GLCfont*)node->data;
+
+    if (font->id == id) {
+      id++;
+      if (id > 0x7fffffff) {
+	__glcRaiseError(GLC_RESOURCE_ERROR);
+	return 0;
+      }
+      node = ctx->fontList.head;
+    }
+  }
+
+  for (node = ctx->genFontList.head; node; node = node->next) {
+    font = (__GLCfont*)node->data;
+
+    if (font->id == id) {
+      id++;
+      if (id > 0x7fffffff) {
+	__glcRaiseError(GLC_RESOURCE_ERROR);
+	return 0;
+      }
+      node = ctx->genFontList.head;
+    }
+  }
+
+  node = (FT_ListNode)__glcMalloc(sizeof(FT_ListNodeRec));
+  if (!node) {
+    __glcRaiseError(GLC_RESOURCE_ERROR);
+    return 0;
+  }
+
+  /* Create an empty font */
+  font = __glcFontCreate(id, NULL, ctx, 0);
+  if (!font) {
+    __glcRaiseError(GLC_RESOURCE_ERROR);
+    __glcFree(node);
+    return 0;
+  }
+
+  node->data = font;
+  FT_List_Add(&ctx->genFontList, node);
+
+  return id;
 }
 
 
@@ -900,6 +947,15 @@ GLboolean APIENTRY glcIsFont(GLint inFont)
       return GL_TRUE;
   }
 
+  /* If the ID corresponds to an empty font reserved by glcGenFontID() then
+   * return GL_TRUE in order to identify the ID as reserved.
+   */
+  for (node = ctx->genFontList.head; node; node = node->next) {
+    __GLCfont* font = (__GLCfont*)node->data;
+    if (font->id == inFont)
+      return GL_TRUE;
+  }
+
   return GL_FALSE;
 }
 
@@ -909,23 +965,42 @@ GLboolean APIENTRY glcIsFont(GLint inFont)
  * creates a new font based on the pattern 'inPattern'. The resulting font is
  * added to the list GLC_FONT_LIST.
  */
-__GLCfont* __glcNewFontFromMaster(__GLCfont* inFont, GLint inFontID,
-				  __GLCmaster* inMaster,
+__GLCfont* __glcNewFontFromMaster(GLint inFontID, __GLCmaster* inMaster,
 				  __GLCcontext *inContext, GLint inCode)
 {
   FT_ListNode node = NULL;
   __GLCfont* font = NULL;
 
-  /* Create a new entry for GLC_FONT_LIST */
-  node = (FT_ListNode)__glcMalloc(sizeof(FT_ListNodeRec));
-  if (!node) {
-    __glcRaiseError(GLC_RESOURCE_ERROR);
-    return NULL;
+  /* Look for the font which ID is inFont in the GLC_FONT_LIST */
+  for (node = inContext->fontList.head; node; node = node->next) {
+    font = (__GLCfont*)node->data;
+    if (font->id == inFontID) {
+      FT_List_Remove(&inContext->fontList, node);
+      break;
+    }
   }
 
-  if (inFont)
-    /* Delete the font */
-    __glcDeleteFont(inFont, inContext);
+  if (!node) {
+    /* Look if the ID is in the empty fonts generated by glcGenFontID() */
+    for (node = inContext->genFontList.head; node; node = node->next) {
+      font = (__GLCfont*)node->data;
+      if (font->id == inFontID) {
+	FT_List_Remove(&inContext->genFontList, node);
+	break;
+      }
+    }
+  }
+
+  if (node)
+    __glcDeleteFont(font, inContext);
+  else {
+    /* Create a new entry for GLC_FONT_LIST */
+    node = (FT_ListNode)__glcMalloc(sizeof(FT_ListNodeRec));
+    if (!node) {
+      __glcRaiseError(GLC_RESOURCE_ERROR);
+      return NULL;
+    }
+  }
 
   /* Create a new font and add it to the list GLC_FONT_LIST */
   font = __glcFontCreate(inFontID, inMaster, inContext, inCode);
@@ -937,9 +1012,6 @@ __GLCfont* __glcNewFontFromMaster(__GLCfont* inFont, GLint inFontID,
   node->data = font;
   FT_List_Add(&inContext->fontList, node);
 
-  /* Update the last font ID (see glcGenFontID())*/
-  if (inFontID >= inContext->lastFontID)
-    inContext->lastFontID = inFontID + 1;
   return font;
 }
 
@@ -966,9 +1038,14 @@ GLint APIENTRY glcNewFontFromMaster(GLint inFont, GLint inMaster)
   __GLCcontext *ctx = NULL;
   __GLCmaster *master = NULL;
   __GLCfont *font = NULL;
-  FT_ListNode node = NULL;
 
   GLC_INIT_THREAD();
+
+  /* Check if inFont is in legal bounds */
+  if (inFont < 1) {
+    __glcRaiseError(GLC_PARAMETER_ERROR);
+    return 0;
+  }
 
   /* Verify that the thread has a current context and that the master
    * identified by 'inMaster' exists.
@@ -979,25 +1056,8 @@ GLint APIENTRY glcNewFontFromMaster(GLint inFont, GLint inMaster)
 
   ctx = GLC_GET_CURRENT_CONTEXT();
 
-  /* Check if inFont is in legal bounds */
-  if (inFont < 1) {
-    __glcRaiseError(GLC_PARAMETER_ERROR);
-    return 0;
-  }
-
-  /* Look for the font which ID is inFont in the GLC_FONT_LIST */
-  for (node = ctx->fontList.head; node; node = node->next) {
-    font = (__GLCfont*)node->data;
-    if (font->id == inFont)
-      break;
-  }
-
-  /* No font with an ID equal to inFont has been found */
-  if (!node)
-    font = NULL;
-
   /* Create and return the new font */
-  font = __glcNewFontFromMaster(font, inFont, master, ctx, 0);
+  font = __glcNewFontFromMaster(inFont, master, ctx, 0);
   __glcMasterDestroy(master);
   return font->id;
 }
@@ -1031,7 +1091,6 @@ GLint APIENTRY glcNewFontFromFamily(GLint inFont, const GLCchar* inFamily)
   GLCchar8* UinFamily = NULL;
   __GLCmaster* master = NULL;
   __GLCfont *font = NULL;
-  FT_ListNode node = NULL;
 
   GLC_INIT_THREAD();
 
@@ -1063,19 +1122,8 @@ GLint APIENTRY glcNewFontFromFamily(GLint inFont, const GLCchar* inFamily)
   if (!master)
     return 0;
 
-  /* Look for the font which ID is inFont in the GLC_FONT_LIST */
-  for (node = ctx->fontList.head; node; node = node->next) {
-    font = (__GLCfont*)node->data;
-    if (font->id == inFont)
-      break;
-  }
-
-  /* No font with an ID equal to inFont has been found */
-  if (!node)
-    font = NULL;
-
   /* Create and return the new font */
-  font = __glcNewFontFromMaster(font, inFont, master, ctx, 0);
+  font = __glcNewFontFromMaster(inFont, master, ctx, 0);
   __glcMasterDestroy(master);
   return font->id;
 }
