@@ -122,6 +122,8 @@ __GLCcontext* __glcContextCreate(GLint inContext)
   This->currentFontList.tail = NULL;
   This->fontList.head = NULL;
   This->fontList.tail = NULL;
+  This->genFontList.head = NULL;
+  This->genFontList.tail = NULL;
 
   This->isCurrent = GL_FALSE;
   This->isInGlobalCommand = GL_FALSE;
@@ -162,7 +164,6 @@ __GLCcontext* __glcContextCreate(GLint inContext)
   This->isInCallbackFunc = GL_FALSE;
   This->buffer = NULL;
   This->bufferSize = 0;
-  This->lastFontID = 1;
   This->vertexArray = __glcArrayCreate(2 * sizeof(GLfloat));
   if (!This->vertexArray) {
     __glcArrayDestroy(This->measurementBuffer);
@@ -422,6 +423,9 @@ void __glcContextDestroy(__GLCcontext *This)
   /* Destroy GLC_FONT_LIST */
   FT_List_Finalize(&This->fontList, __glcFontDestructor,
                    &__glcCommonArea.memoryManager, This);
+  /* Destroy empty fonts generated by glcGenFontID() */
+  FT_List_Finalize(&This->genFontList, __glcFontDestructor,
+		   &__glcCommonArea.memoryManager, This);
 
   if (This->masterHashTable)
     __glcArrayDestroy(This->masterHashTable);
@@ -559,7 +563,7 @@ __GLCfont* __glcContextGetFont(__GLCcontext *This, GLint inCode)
     master = __glcMasterMatchCode(This, inCode);
     if (!master)
       return NULL;
-    font = __glcNewFontFromMaster(NULL, glcGenFontID(), master, This, inCode);
+    font = __glcNewFontFromMaster(glcGenFontID(), master, This, inCode);
     __glcMasterDestroy(master);
 
     if (font) {
