@@ -1,6 +1,6 @@
 /* QuesoGLC
  * A free implementation of the OpenGL Character Renderer (GLC)
- * Copyright (c) 2002, 2004-2007, Bertrand Coconnier
+ * Copyright (c) 2002, 2004-2008, Bertrand Coconnier
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Lesser General Public
@@ -128,12 +128,12 @@ struct __GLCcontextRec {
   __GLCstringState stringState;
   FT_ListRec currentFontList;	/* GLC_CURRENT_FONT_LIST */
   FT_ListRec fontList;		/* GLC_FONT_LIST */
+  FT_ListRec genFontList;       /* Fonts generated by glcGenFontID() */
   __GLCarray* masterHashTable;
   __GLCarray* catalogList;	/* GLC_CATALOG_LIST */
   __GLCarray* measurementBuffer;
   GLfloat measurementStringBuffer[12];
   GLboolean isInCallbackFunc;	/* Is a callback function executing ? */
-  GLint lastFontID;
   __GLCarray* vertexArray;	/* Array of vertices */
   __GLCarray* controlPoints;	/* Array of control points */
   __GLCarray* endContour;	/* Array of contour limits */
